<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/login">

    <fragment
        android:id="@+id/login"
        android:name="com.udacity.shoestore.Login"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_welcome"
            app:destination="@id/welcome"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit" />
    </fragment>
    <fragment
        android:id="@+id/welcome"
        android:name="com.udacity.shoestore.Welcome"
        android:label="@string/welcome"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/action_welcome_to_instruction"
            app:destination="@id/instruction"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit" />
    </fragment>
    <fragment
        android:id="@+id/instruction"
        android:name="com.udacity.shoestore.Instruction"
        android:label="@string/instructions"
        tools:layout="@layout/fragment_instruction">
        <action
            android:id="@+id/action_instruction_to_shoeList"
            app:destination="@id/shoeList"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit"
            app:popUpTo="@id/login"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/shoeList"
        android:name="com.udacity.shoestore.ShoeList"
        android:label="@string/shoe_listing"
        tools:layout="@layout/fragment_shoe_list">
        <action
            android:id="@+id/action_shoeList_to_shoeDetail"
            app:destination="@id/shoeDetail"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit"/>
    </fragment>
    <fragment
        android:id="@+id/shoeDetail"
        android:name="com.udacity.shoestore.ShoeDetail"
        android:label="@string/details"
        tools:layout="@layout/fragment_shoe_detail" />

</navigation>