<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Instruction">

    <!-- Just a few layout elements, ideal for LinearLayout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_big"
        android:padding="@dimen/default_padding">

        <TextView
            android:id="@+id/textHowToUse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_big"
            android:text="@string/how_to_use"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_big"
            android:layout_marginRight="@dimen/margin_big"
            android:text="@string/instructions_description"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnContinue"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:text="@string/lets_go"
            android:theme="@style/SecondaryButton" />

    </LinearLayout>

</layout>