<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ShoeDetail">
    
    <data>
        <variable
            name="shoeDetailViewModel"
            type="com.udacity.shoestore.ShoeDetailViewModel" />
    </data>

    <!-- This screen is a little more complicated and has more elements so I made use of ConstraintLayout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_small">

        <TextView
            android:id="@+id/labelName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:layout_constraintBaseline_toBaselineOf="@+id/editName"
            app:layout_constraintEnd_toStartOf="@+id/editName"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={shoeDetailViewModel.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/labelCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company"
            app:layout_constraintBaseline_toBaselineOf="@+id/editCompany"
            app:layout_constraintEnd_toStartOf="@+id/editCompany"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={shoeDetailViewModel.company}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editName" />

        <TextView
            android:id="@+id/labelSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size"
            app:layout_constraintBaseline_toBaselineOf="@+id/editSize"
            app:layout_constraintEnd_toStartOf="@+id/editSize"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:digits="0123456789."
            android:inputType="numberDecimal"
            android:text="@={shoeDetailViewModel.size}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editCompany"/>

        <TextView
            android:id="@+id/labelDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            app:layout_constraintBaseline_toBaselineOf="@+id/editDescription"
            app:layout_constraintEnd_toStartOf="@+id/editDescription"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={shoeDetailViewModel.description}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editSize" />

        <Button
            android:id="@+id/btnAddShoe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/add_shoe"
            android:theme="@style/PrimaryButton"
            app:layout_constraintBottom_toTopOf="@+id/btnCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@android:string/cancel"
            android:theme="@style/SecondaryButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>